tests/negative/test_expr_shl_by_neg.orb
fnc main () () {
    >> 1 -1;
};